# python-project-lvl3

./: .gitignore  .log.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
page_loader/: __init__.py  download.py  download_page.py  file_saver.py  html_parser.py  loader.py  logger.py  name_formatter.py  output.py
page_loader/scripts/: page_loader.py  start_page_loader.py
tests/: file_reader.py  test_download_page.py
tests/fixtures/: file1.html  html_result.html  script.js  style.css
