[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page-loader"
authors = ["Dmitri Spirin <yamsky.xbox@gmail.com>"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.4.1"
requests = "^2.28.0"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = ">= 6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.start_page_loader:main"